# chassis_communication

./: README.md
cti_chassis_data/: CMakeLists.txt  package.xml
cti_chassis_data/include/cti_chassis_data/: cti_chassis_data.h
cti_chassis_data/src/: cti_chassis_data.cc  cti_chassis_data_node.cpp
cti_chassis_handdle/: .upload.sh  CMakeLists.txt
cti_chassis_handdle/.obj-x86_64-linux-gnu/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
cti_chassis_handdle/.obj-x86_64-linux-gnu/ament_cmake_core/: cti_chassis_handdleConfig-version.cmake  cti_chassis_handdleConfig.cmake  package.cmake
cti_chassis_handdle/.obj-x86_64-linux-gnu/ament_cmake_core/stamps/: package.xml.stamp
cti_chassis_handdle/.obj-x86_64-linux-gnu/ament_cmake_environment_hooks/: local_setup.dsv  local_setup.sh  package.dsv
cti_chassis_handdle/.obj-x86_64-linux-gnu/ament_cmake_index/share/ament_index/resource_index/package_run_dependencies/: cti_chassis_handdle
cti_chassis_handdle/.obj-x86_64-linux-gnu/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
cti_chassis_handdle/include/crc16/: crc16.cpp
cti_chassis_handdle/include/cti_chassis_handdle/: cti_chassis_communicate_interface.hpp  cti_chassis_communicate_realization.hpp  cti_chassis_handdle.hpp  serial_cmd.hpp  user_cmd.hpp
cti_chassis_handdle/launch/: demo.launch.py  demo_v6.launch.py  demo_v7_0.launch.py
cti_chassis_handdle/src/: cti_chassis_communicate_realization.cpp  cti_chassis_handdle.cpp  main.cpp
cti_chassis_msgs/: CMakeLists.txt  package.xml
cti_chassis_msgs/msg/: ChassisErrorCode.msg  CmdAnswer.msg  NavigationLog.msg  RangeRawData.msg  SerialStatus.msg  UltV30Datas.msg  UpdateInfo.msg  VehicleState.msg
cti_fpga_data/: CMakeLists.txt  package.xml
cti_fpga_data/include/cti_fpga_data/: cti_fpga_data.h
cti_fpga_data/src/: cti_fpga_data.cc  cti_fpga_data_node.cpp
cti_fpga_serial/: CMakeLists.txt  package.xml
cti_fpga_serial/include/cti_fpga_serial/: lin_ult_mode.hpp  user_cmd.hpp
cti_fpga_serial/include/serial_sdk/: crc16.cpp  serial_api.cpp  serial_api.hpp  serial_api_al_linux.cpp  serial_api_al_linux.hpp  serial_cmd.hpp
cti_fpga_serial/launch/: cti_fpga_data.launch  demo.launch  demo_test.launch
cti_fpga_serial/msg/: LoraIdSetState.msg  cleanFuncTestState.msg  dustbinidstate.msg  firmwareinfo.msg  fwVerCheckState.msg  navigationlog.msg  serialstatus.msg  ultModeSetState.msg  updateinfo.msg  vehiclestate.msg
cti_fpga_serial/src/: cti_fpga_serial_node.cpp
firmware_update_manager/: CMakeLists.txt  package.xml
firmware_update_manager/include/: crc16.hpp  manage_updates.hpp  serial_api.hpp  serial_api_al_linux.hpp  serial_cmd.hpp
firmware_update_manager/msg/: comm_data.msg
firmware_update_manager/src/: crc16.cpp  manage_updates.cpp  serial_api.cpp  serial_api_al_linux.cpp  serial_recv.cpp  serial_send.cpp
mcu_ota/: CMakeLists.txt  README.md  package.xml
mcu_ota/include/: cmd_type.hpp  common_type.hpp  common_value.hpp  crc16.hpp  mcu_ota.hpp  ota_state.hpp
mcu_ota/src/: crc16.cpp  main.cpp  mcu_ota.cpp  ota_state.cpp
