<?xml version="1.0"?>
<package>
  <name>cti_fpga_data</name>
  <version>0.0.0</version>
  <description>The cti_fpga_serial package</description>
  
  <maintainer email="cti@todo.todo">cti</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cti_msgs</build_depend>
  <build_depend>ctilog</build_depend>
  <build_depend>cti_fpga_serial</build_depend>
  <build_depend>cti_monitor</build_depend>
  <build_depend>cti_rblite_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>serial</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>cti_msgs</run_depend>
  <run_depend>ctilog</run_depend>
  <run_depend>cti_fpga_serial</run_depend>
  <run_depend>cti_monitor</run_depend>
  <run_depend>cti_rblite_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
